# platform.core.telephony.telephony-daemon

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README  project.config  telephony-daemon.manifest
debian/: changelog  control  copyright  rules  telephony-daemon.install.in  telephony-daemon.postinst
packaging/: telephony-daemon-on-demand.service  telephony-daemon.manifest  telephony-daemon.service  telephony-daemon.spec  telephony.service
resource/etc/rc.d/init.d/: telephony-daemon
resource/etc/rc.d/rc3.d/: S30telephony-daemon
src/: main.c  monitor.c  monitor.h
systemd/: telephony.service
